# docgen

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  agent.py  docker-compose.yml  docker-entrypoint.sh  main.py  manage.py  pyproject.toml
core/: __init__.py  __main__.py  agent.py  config.py  errors.py  git_analyzer.py  main.py  models.py
docgen/: __init__.py  __main__.py  agent.py  config.py  doc_generator.py  git_analyzer.py  main.py  models.py
tui/: app.py
tui/commands/: tui.py
tui/screens/: dashboard.py  init_form.py  snapshot_form.py  watch_monitor.py
tui/widgets/: context_panel.py  status_bar.py
webui/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
webui/webui/: __init__.py  admin.py  apps.py  crypto.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
webui/webui/management/commands/: docgen_worker.py
webui/webui/migrations/: 0001_initial.py  0002_release_versions.py  0003_project_secrets.py  0004_alter_job_kind.py  0005_project_max_iterations.py  0006_project_llm_provider.py  0007_job_log_path.py  0008_project_watch_interval.py  0009_globalsettings_job_retry_count_alter_project_slug.py  0010_globalsettings_max_iterations.py  0011_alter_project_watch_interval.py  0012_remove_project_default_branch.py
webui/webui/static/webui/: app.css
webui/webui/templates/registration/: login.html
webui/webui/templates/webui/: _job_output.html  _job_status.html  _project_actions.html  base.html  dashboard.html  document_detail.html  job_detail.html  project_detail.html  project_form.html  system_settings.html  (+3 more)
