[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docgen"
version = "0.0.2"
description = "Инструмент с встроенным ИИ-агентом, предназначенный для автоматического поддержания документации программного продукта на основе анализа git-репозитория."
authors = [
	{name = "daisccho"},
	{name = "Master-20"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "click>=8.1",
    "cryptography>=42.0",
    "django>=5.1,<6.0",
    "gitpython>=3.1",
    "openai>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[tool.setuptools.package-data]
"webui.webui" = ["templates/**/*.html", "static/**/*"]

[project.scripts]
docgen = "core.main:cli"

[tool.setuptools]
packages = [
    "core",
    "webui",
    "webui.webui",
    "webui.webui.management",
    "webui.webui.management.commands",
]
package-dir = {"core" = "core", "webui" = "webui"}
